[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solana-defi-agent"
version = "0.1.0"
description = "Solana DeFi Trading Agent with Bilingual Support"
dependencies = [
    "flask>=3.0.2",
    "flask-cors>=4.0.0",
    "waitress>=3.0.0",
    "aiohttp>=3.9.3",
    "redis>=5.0.1",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "requests>=2.31.0"
]

[tool.setuptools]
packages = ["src"]
